hphp/hack/test/typecheck/foreach_ref2.php.exp
File "foreach_ref2.php", line 5, characters 26-30:
Cannot take references to array elements. (Typing[4225])
